--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vue/devtools": "^5.3.3",
     "jshint": "^2.12.0",
     "nativescript-socketio": "^3.3.1",
+    "nativescript-sqlite": "^2.6.6",
     "nativescript-toasty": "^3.0.0-alpha.2",
     "nativescript-vue": "^2.8.1",
     "nativescript-vue-devtools": "^1.4.0",
